New Project added
Catch me Game Project Added

--- a/index.html
+++ b/index.html
@@ -39,7 +39,8 @@
 
           <span>Amit KC</span>
         </h1>
-        <p>A Web Developer based in Nepal</p>
+        <!-- <p>A Web Developer based in Nepal</p> -->
+        <p>on a mission to save the world—one bug at a time.</p>
         <a href="#contact" class="btn btn--pink">Get in touch</a>
       </div>
     </div>
@@ -56,13 +57,14 @@
 
 
           <!-- Individual Projects DIV -->
+          <!-- Project 1 -->
           <div class="work__box">
             <div class="work__text">
               <h3>TODO Web APP</h3>
               <p>
                 Open Source Todo web application with full Authorization and Authentication System.
               </p>
-              <ul class="work__list">
+              <ul class="work__list"> <strong> Tech Stack : </strong>
                 <li>Python Django</li>
                 <li>Bootstrap</li>
                 <li>MySql</li>
@@ -83,7 +85,33 @@
                 class="work__image" alt="Project 1" />
             </div>
           </div>
-          <!-- END DIV -->
+
+          <!-- Project 2 -->
+          <div class="work__box">
+            <div class="work__text">
+              <h3>Catch Me (Game)</h3>
+              <p>
+                Fun Desktop application/game where user have to Catch the Button to WIN🏆
+              </p>
+              <ul class="work__list"> <strong> Tech Stack : </strong>
+                <li>JAVA</li>
+              </ul>
+
+              <div class="work__links">
+                <a href="https://github.com/MrAalu/CatchMe-Game" target="_blank" class="link__text">
+                  Source Code <span>&rarr;</span>
+                </a>
+                <a href="https://github.com/MrAalu/CatchMe-Game" title="View Source Code" target="_blank">
+                  <img src="./images/github.svg" class="work__code" alt="GitHub">
+                </a>
+              </div>
+            </div>
+            <div class="work__image-box">
+              <img src="https://im3.ezgif.com/tmp/ezgif-3-888125041a.gif" class="work__image" alt="Project 1" />
+            </div>
+          </div>
+
+          <!-- END Projects -->
 
         </div>
       </div>
@@ -109,7 +137,8 @@
           </div>
 
           <div class="about__photo-container">
-            <img class="about__photo" src="https://avatars.githubusercontent.com/u/97379300?v=4" alt />
+            <!-- <img class="about__photo" src="https://avatars.githubusercontent.com/u/97379300?v=4" alt /> -->
+            <img class="about__photo" src="https://i.ibb.co/bPgXT6h/AMIT-KC.jpg" alt />
           </div>
         </div>
       </div>
