--- a/index.html
+++ b/index.html
@@ -107,7 +107,7 @@
               </div>
             </div>
             <div class="work__image-box">
-              <img src="https://im3.ezgif.com/tmp/ezgif-3-888125041a.gif" class="work__image" alt="Project 1" />
+              <img src="https://i.ibb.co/LrSVH5B/Catchme-GIF.gif" class="work__image" alt="Project 2" />
             </div>
           </div>
 
